[gd_scene load_steps=24 format=3 uid="uid://dvwl2b6vslbe4"]

[ext_resource type="Script" uid="uid://681j0yp4c50r" path="res://player/player.gd" id="1_qhqgy"]
[ext_resource type="Script" uid="uid://cxvwqo2ivf8sq" path="res://player/camera_2d.gd" id="2_g6k8r"]
[ext_resource type="Texture2D" uid="uid://wsv8yd7i70gb" path="res://player/textures/Gurggu sprite sheet.png" id="2_qhqgy"]
[ext_resource type="Shader" uid="uid://0f001ytc1ob5" path="res://player/player.gdshader" id="3_8t03j"]
[ext_resource type="Texture2D" uid="uid://b27o3x5qppu10" path="res://player/textures/Gurggu normal map spritesheet.png" id="3_dqkch"]
[ext_resource type="Script" uid="uid://cvaorv00txcd1" path="res://player/AfterimageSpawner.gd" id="4_tuyoq"]
[ext_resource type="PackedScene" uid="uid://buf5pdb22e0bo" path="res://enemis/entity_health.tscn" id="5_qjkh3"]
[ext_resource type="Script" uid="uid://b1gy7oj6u3lgm" path="res://player/label.gd" id="6_boad6"]
[ext_resource type="Texture2D" uid="uid://bxgjf7m8oknvn" path="res://player/textures/Gurggu dash ready sprite sheet.png" id="6_hg6s5"]
[ext_resource type="Script" uid="uid://de7d6j8elrthl" path="res://player/dash_blink.gd" id="8_rgyib"]
[ext_resource type="PackedScene" uid="uid://dcfljpyeu8gif" path="res://enemis/soft_collision.tscn" id="11_2ieo8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2ieo8"]
shader = ExtResource("3_8t03j")
shader_parameter/origin = Color(0, 0.7411765, 1, 1)
shader_parameter/new = Color(0.2627451, 0.5176471, 0.015686275, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_qlg0r"]
diffuse_texture = ExtResource("2_qhqgy")
normal_texture = ExtResource("3_dqkch")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qhqgy"]
radius = 5.0
height = 14.0

[sub_resource type="Animation" id="Animation_jxylt"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gurggu:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 1)]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "dash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gurggu:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="Animation_qhqgy"]
resource_name = "falling"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gurggu:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "falling_up"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gurggu:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "default"
length = 1.45
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gurggu:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 0.733333, 0.933333, 1.13333, 1.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "spinning"
length = 0.64
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gurggu:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2)]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "walk"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gurggu:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_762f5"]
_data = {
&"RESET": SubResource("Animation_jxylt"),
&"dash": SubResource("Animation_qlg0r"),
&"falling": SubResource("Animation_qhqgy"),
&"falling_up": SubResource("Animation_dqkch"),
&"idle": SubResource("Animation_fjrip"),
&"spin": SubResource("Animation_smehm"),
&"walk": SubResource("Animation_tuyoq")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yw30f"]
size = Vector2(16, 5)

[node name="player" type="CharacterBody2D"]
process_mode = 1
collision_layer = 4
script = ExtResource("1_qhqgy")
team = 0

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(6, 6)
limit_enabled = false
script = ExtResource("2_g6k8r")

[node name="Gurggu" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_2ieo8")
texture = SubResource("CanvasTexture_qlg0r")
hframes = 16
vframes = 4
frame = 17

[node name="dash_halo" type="Node2D" parent="Gurggu"]
visible = false
script = ExtResource("8_rgyib")

[node name="Sprite2D" type="Sprite2D" parent="Gurggu/dash_halo"]
texture = ExtResource("6_hg6s5")
hframes = 16
vframes = 4

[node name="AfterimageSpawner" type="Node2D" parent="."]
script = ExtResource("4_tuyoq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qhqgy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_762f5")
}

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
one_shot = true

[node name="WaterJumpTimer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
z_index = 4096
offset_left = -123.0
offset_top = -62.0
offset_right = -83.0
offset_bottom = -39.0
script = ExtResource("6_boad6")
metadata/_edit_use_anchors_ = true

[node name="WaterDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WaterDetector"]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qhqgy")

[node name="AboveWaterDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AboveWaterDetector"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_yw30f")

[node name="EntityHealth" parent="." instance=ExtResource("5_qjkh3")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntityHealth"]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qhqgy")

[node name="SoftCollision" parent="." instance=ExtResource("11_2ieo8")]
automatically_apply = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision"]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qhqgy")

[connection signal="timeout" from="DashTimer" to="." method="on_dash_timer_timeout"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timeout"]
